# memosy_bot_rust

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: update-on-push.yml
src/: main.rs
